[gd_scene load_steps=25 format=2]

[ext_resource path="res://Textures/MenuDrone.png" type="Texture" id=1]
[ext_resource path="res://Fonts/FFFFORWA.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Textures/MenuTile.png" type="Texture" id=3]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=4]
[ext_resource path="res://Textures/MenuTitleDesignBar.png" type="Texture" id=5]
[ext_resource path="res://Textures/Resource-Sheet.png" type="Texture" id=6]
[ext_resource path="res://Sound/BGMusic.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 9
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 120, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=17]
size = 14
font_data = ExtResource( 2 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -1.0
margin_bottom = 1.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubTitle" type="TextureRect" parent="."]
margin_left = 159.453
margin_top = 10.9238
margin_right = 359.453
margin_bottom = 70.9238
rect_scale = Vector2( 1.00452, 0.789848 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Control" parent="."]
margin_left = 251.236
margin_top = 144.595
margin_right = 251.236
margin_bottom = 144.595
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="Info"]
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.415686, 0, 0.388235, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Built with Godot3
version 0.0.2"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Title"]
margin_left = 176.695
margin_top = 15.9725
margin_right = 346.695
margin_bottom = 46.9725
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Drone Game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
margin_left = 77.0319
margin_top = -6.06198
margin_right = 117.032
margin_bottom = 33.938
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Drone" type="TextureRect" parent="Buttons"]
margin_left = -71.4732
margin_top = 56.9361
margin_right = 38.5268
margin_bottom = 156.936
texture = ExtResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="Buttons"]
margin_left = -1.10602
margin_top = 30.2907
margin_right = 80.0
margin_bottom = 58.2907
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/PlayButton"]
margin_left = 2.92442
margin_top = 4.97176
margin_right = 41.9244
margin_bottom = 24.9718
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0.0690308, 0.669249, 0.679688, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelsButton" type="Button" parent="Buttons"]
margin_left = 30.4876
margin_top = 61.4944
margin_right = 95.4876
margin_bottom = 89.4944
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 6 )
custom_fonts/font = SubResource( 4 )
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/LevelsButton"]
margin_left = 2.92442
margin_top = 4.97176
margin_right = 41.9244
margin_bottom = 24.9718
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0.0690308, 0.669249, 0.679688, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Levels"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradesButton" type="Button" parent="Buttons"]
margin_left = 52.9353
margin_top = 91.3341
margin_right = 144.935
margin_bottom = 119.334
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 7 )
custom_fonts/font = SubResource( 4 )
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/UpgradesButton"]
margin_left = 3.25813
margin_top = 4.88504
margin_right = 90.2581
margin_bottom = 24.885
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0.0690308, 0.669249, 0.679688, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Upgrades"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="Buttons"]
margin_left = 35.0414
margin_top = 120.514
margin_right = 110.041
margin_bottom = 148.514
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 8 )
custom_fonts/font = SubResource( 4 )
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/OptionsButton"]
margin_left = 2.92442
margin_top = 4.97176
margin_right = 41.9244
margin_bottom = 24.9718
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0.0690308, 0.669249, 0.679688, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="Buttons"]
margin_left = 3.43407
margin_top = 150.615
margin_right = 46.4341
margin_bottom = 178.615
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 9 )
custom_fonts/font = SubResource( 4 )
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/ExitButton"]
margin_left = 2.92442
margin_top = 4.97176
margin_right = 41.9244
margin_bottom = 24.9718
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0.0690308, 0.669249, 0.679688, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Exit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CursedChips" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="CursedChips"]
position = Vector2( 327.872, 92.4901 )
frames = SubResource( 16 )
frame = 4
playing = true

[node name="HBoxContainer" type="HBoxContainer" parent="CursedChips"]
margin_left = 222.0
margin_top = 76.0
margin_right = 316.0
margin_bottom = 116.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Counter" type="Label" parent="CursedChips/HBoxContainer"]
margin_left = 83.0
margin_top = 10.0
margin_right = 94.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 17 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" parent="." instance=ExtResource( 7 )]
position = Vector2( 189.084, 93.3527 )
[connection signal="button_up" from="Buttons/PlayButton" to="." method="_on_PlayButton_button_up"]
[connection signal="button_up" from="Buttons/LevelsButton" to="." method="_on_LevelsButton_button_up"]
[connection signal="button_up" from="Buttons/UpgradesButton" to="." method="_on_UpgradesButton_button_up"]
[connection signal="button_up" from="Buttons/OptionsButton" to="." method="_on_OptionsButton_button_up"]
[connection signal="button_up" from="Buttons/ExitButton" to="." method="_on_ExitButton_button_up"]
